fixed spacing in col_box

--- a/css/style.css
+++ b/css/style.css
@@ -1315,11 +1315,16 @@ a {
     padding: 0;
 }
 
+
 .contact_content h1 {
     text-align: center;
     font-size: 35px;
     text-transform: uppercase;
     padding-top: 20px;
+}
+
+.col_box_main{
+    margin-left: 30px;
 }
 
 .col_box_main>div {
